style: fix containers spacing

--- a/src/components/Portfolio/index.css
+++ b/src/components/Portfolio/index.css
@@ -1,3 +1,9 @@
+body {
+  padding: 0;
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 .portfolio-container {
   min-height: 30vh;
   flex: 0 1 auto;
@@ -77,17 +83,13 @@ nav .menu__item {
 }
 
 .about-page {
-  padding-top: 2rem;
-  min-height: 30vh;
+  min-height: 10vh;
+
   display: flex;
   flex: 0 1 auto;
   flex-direction: column;
   justify-content: center;
   background-color: #00004e;
-  position: absolute;
-  top: 400px;
-  right: 0;
-  left: 0;
 }
 
 .about-page h1 {
@@ -101,8 +103,7 @@ nav .menu__item {
 }
 
 .about-page .about-wrapper {
-  padding: 40px;
-  padding-bottom: 180px;
+  padding: 19px;
 }
 
 .about-page .about-wrapper .about-content p {
@@ -114,10 +115,7 @@ nav .menu__item {
   min-height: 20vh;
   padding: 35px;
   background-color: #00baba;
-  position: absolute;
-  top: 830px;
-  right: 0;
-  left: 0;
+  width: 100%;
 }
 
 .portfolio-page h1 {
@@ -166,10 +164,6 @@ nav .menu__item {
   flex-direction: column;
   justify-content: center;
   background-color: #00004e;
-  position: absolute;
-  top: 1990px;
-  right: 0;
-  left: 0;
 }
 .contact-wrapper {
   padding: 40px;
@@ -257,8 +251,6 @@ a {
   }
 }
 
-@media (min-width: 428px) {
-}
 @media (min-width: 768px) {
   .contact-page {
     top: 1990px;
@@ -283,6 +275,11 @@ a {
   }
 }
 
+@media (min-width: 816px) {
+  .portfolio-page {
+    top: 819px;
+  }
+}
 @media (min-width: 1440px) {
   .portfolio-item p {
     display: block;
